--- a/app/templates/eventFrames/dashboard.html
+++ b/app/templates/eventFrames/dashboard.html
@@ -110,6 +110,8 @@
                         <th>User</th>
                         <th>Start</th>
                         <th>End</th>
+                        <th>Duration Seconds</th>
+                        <th>Duration</th>
                         <th></th>
                         <th></th>
                         <th></th>
@@ -135,6 +137,16 @@
                                 <td>{{ moment(eventFrame.EndTimestamp).format("YYYY-MM-DD HH:mm:ss") }}</td>
                             {% else %}
                                 <td></td>
+                            {% endif %}
+                            <td>{{ eventFrame.durationSeconds() }}</td>
+                            {% if eventFrame.durationSeconds() < 60 %}
+                                <td>{{ eventFrame.durationSeconds() | round(1) }} sec</td>
+                            {% elif eventFrame.durationSeconds() < 3600 %}
+                                <td>{{ (eventFrame.durationSeconds() / 60) | round(1) }} mins</td>
+                            {% elif eventFrame.durationSeconds() < 86400 %}
+                                <td>{{ (eventFrame.durationSeconds() / 3600) | round(1) }} hrs</td>
+                            {% else %}
+                                <td>{{ (eventFrame.durationSeconds() / 86400) | round(1) }} days</td>
                             {% endif %}
                             {% if eventFrame.EndTimestamp is none %}
                                 <td><a class = "btn btn-default" title = "End" href = '{{ url_for("eventFrames.endEventFrame",
@@ -400,9 +412,16 @@
                     null,
                     null,
                     null,
+                    null,
+                    null,
                     { "orderable": false }, // Stop button.
                     { "orderable": false }, // Edit button.
                     { "orderable": false }  // Delete button.
+                ],
+                "columnDefs":
+                [
+                    {"orderData": 7, "targets": 8},
+                    {"visible": false, "targets": 7},
                 ],
                 "stateSave": true,
                 "stateDuration": 0,
